Updated links in all navigation.  Created about.html.  Stylized about.html to match design doc.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <header>
         <img src="img/lambda-black.png">
         <nav>
-          <a href="#">Home</a>
-          <a href="#">About</a>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
@@ -26,7 +26,7 @@
 
       <main class="home">
         <img src="img/jumbo.jpg">
-        <section class="top-content">
+        <section class="top-content topHome">
             <div class="text-container">
                 <h2>The Future</h2>
                 <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
@@ -76,8 +76,8 @@
 
         <footer>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
