--- a/about.html
+++ b/about.html
@@ -15,10 +15,11 @@
     <div class="container about-page">
       <header>
         <img src="img/lambda-black.png">
+        <p class="pLogo">λambda<p>
         <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
-          <a href="#">Products</a>
+          <a href="products.html">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
@@ -40,20 +41,20 @@
             <button>Learn More</button>
           </div>
           <div class="sub-text-container">
-            <img src="img/about-working.png" alt="strategy">
+            <img src="img/about-working.png" alt="How We Work">
             <h2>How We Work</h2>
             <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
             <button>Learn More</button>
           </div>
 
           <div class="sub-text-container">
-            <img src="img/about-office.png" alt="strategy">
+            <img src="img/about-office.png" alt="Places We Work">
             <h2>Places We Work</h2>
             <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
             <button>Learn More</button>
           </div>
           <div class="sub-text-container">
-            <img src="img/about-meeting.png" alt="strategy">
+            <img src="img/about-meeting.png" alt="Collaboration">
             <h2>Collaboration</h2>
             <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
             <button>Learn More</button>
@@ -69,7 +70,7 @@
         <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
-          <a href="#">Products</a>
+          <a href="products.html">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
