--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <div class="container">
       <header>
         <img src="img/lambda-black.png">
+        <p class="pLogo">λambda<p>
         <nav>
           <a href="index.html">Home</a>
           <a href="about.html">About</a>
-          <a href="#">Products</a>
+          <a href="products.html">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
@@ -78,7 +79,7 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
-                <a href="#">Products</a>
+                <a href="products.html">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
             </nav>
